--- a/Ethiopia/index.html
+++ b/Ethiopia/index.html
@@ -232,14 +232,14 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
     var axis = d3.svg.axis()
     	.scale(y)
     	.orient("left")
-    	.tickSize(9)
+    	.tickSize(12)
     	.tickValues([min*.95]
     	.concat(bounds));
 
     //DRAWING THE LEGEND
     var key = map.append("g")
         .attr("class", "key")
-        .attr("transform", "translate("+(width*.80)+","+(height*.08)+")");
+        .attr("transform", "translate("+(width*.9)+","+(height*.3)+")");
 
     key.selectAll("rect")
         .data(color.range().map(function(d, i) {
@@ -252,8 +252,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
         .enter().append("rect")
         .attr("height", function(d,i) { return d.x0 - d.x1})
         .attr("y", function(d, i) { return d.x1; })
-        .attr("width", 8)
-        .attr("x",-9)
+        .attr("width", 10)
+        .attr("x",-10)
         .style("fill", function(d) { return d.z; });
 
     key.call(axis);
@@ -278,13 +278,13 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
     //DEFINING THE MAPPING VARIABLES
 	var projectionZone = d3.geo.mercator()
 		.center([8.5,10.5])
-		.scale(1600)
-		.translate([-1*width, .39*height]);
+		.scale(1400)
+		.translate([-0.85*width, .41*height]);
 
 	var projectionRegion = d3.geo.mercator()
 		.center([8.5,10.5])
-		.scale(1000)
-		.translate([-0.2*width, .19*height]);
+		.scale(800)
+		.translate([-0.05*width, .22*height]);
 
 	var pathZone = d3.geo.path()
 		.projection(projectionZone);
@@ -594,8 +594,8 @@ function drawHistogram(townPriceData){
 function drawLine(townPriceData){
 	//console.log(townPriceData)
 	//THIS FUNCTION GETS THE DATA IN FORMAT FOR THE CHART
-	function reshapeMonthlyPrice(data,product,startDate,endDate) {
-		var monthlyPrice = data;
+	/*function reshapeMonthlyPrice(townPriceData,product,startDate,endDate) {
+		var monthlyPrice = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});;
 		var mainArray = [];
 		for (var i=0;i<monthlyPrice.length;i++) {
 			if (mainArray.filter(function(d) {return d.region===monthlyPrice[i].region}).length===0) { // does the state have its own list item yet?
@@ -624,21 +624,19 @@ function drawLine(townPriceData){
 			mainArray[i].values.sort(function(a,b) {return a.date - b.date;}) // for every state sort the values array by month, ascending
 		}
 		return mainArray;
-	}
-
+	}*/
 	//GETTING THE DATA READY
   	var sel = document.getElementById('productSelectPrice'); //selecting the default based on currentinput
   	var product = sel.options[sel.selectedIndex].value; //pulling the value of the selected product
 	//var dates = $('#slider').slider('values'); //pulls the date values from the slider
 	var startDate = dateFormat.parse('2010-01-01')//sliderMonths[dates[0]];
    	var endDate = dateFormat.parse('2014-06-01')//sliderMonths[dates[1]];
-  	var data = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});
-  	var months = uniq_fast(data.map(function(d){ return d.date})).sort(function(a,b) { return a - b;});
-  	var lineData = reshapeMonthlyPrice(data,product,startDate,endDate);
+  	var lineData = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});//reshapeMonthlyPrice(townPriceData,product,startDate,endDate);
+  	var months = uniq_fast(lineData.map(function(d){ return d.date})).sort(function(a,b) { return a - b;});
 
   	//CREATING THE CANVAS
 	var containerSize = d3.select('#lineChartContainer').node().getBoundingClientRect()
-  	var margin = {top: 0.08*containerSize.height , right: 0.03*containerSize.width, bottom: 0.15*containerSize.height, left: 0.06*containerSize.width};
+  	var margin = {top: 0.08*containerSize.height , right: 0.03*containerSize.width, bottom: 0.06*containerSize.height, left: 0.06*containerSize.width};
   	var padding = {top: 0.006*containerSize.height, right: 0.012*containerSize.width, bottom: 0.006*containerSize.height, left: 0.06*containerSize.width};
   	var width = containerSize.width - margin.right - margin.left; //Chart width
   	var height = containerSize.height - margin.top - margin.bottom; //Chart height
@@ -668,14 +666,13 @@ function drawLine(townPriceData){
 			class: 'lineRect'
 		});
 
-
 	//DEFINING THE CHARTING VARIABLES
 	var xScale = d3.time.scale()
 		.domain(d3.extent(months))
 		.range([0, width]);
 
 	var yScale = d3.scale.linear()
-		.domain([0, d3.max(data.map(function(d) { return d.price; }))*1.05])
+		.domain([0, d3.max(lineData.map(function(d) { return d.price; }))*1.05])
 		.range([height, 0]);
 
     var line = d3.svg.line()
@@ -721,11 +718,11 @@ function drawLine(townPriceData){
         .attr("class", "y axis")
         .call(yAxis);
 
-	var states = lineChart.append("g")
+	var towns = lineChart.append("g")
 		.selectAll("path")
 		.data(lineData)
 		.enter().append("path")
-		.attr("class", "stateLines")
+		.attr("class", "townLines")
 		.attr("d", function(d) { d.line = this; return line(d.values); })
 		.attr("clip-path", 'url(#lineclip)')
 
@@ -819,9 +816,9 @@ function drawLine(townPriceData){
     });*/
 	function redrawLine(item,startDate,endDate,drawVoronoi) {
 		// var months = uniq_fast(priceData.filter(function(e) {return e.item===item && e.date>=startDate && e.date<=endDate}).map(function(d){ return d.date})).sort(function(a,b) { return a - b;});
-		data = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});
+		lineData = townPriceData.filter(function(d){return d.item == product && d.date>= startDate && d.date <= endDate});
 		months = uniq_fast(data.map(function(d){ return d.date})).sort(function(a,b) { return a - b;})
-		var lineData = reshapeMonthlyPrice(data,item,startDate,endDate);
+		//var lineData = reshapeMonthlyPrice(data,item,startDate,endDate);
 
 		xScale.domain([startDate,endDate]);
 		yScale.domain([0, d3.max(data.map(function(d) { return d.price; }))*1.05]);
